Implemented recently viewed products feature

--- a/views/books.ejs
+++ b/views/books.ejs
@@ -122,7 +122,7 @@
     </div>
 
     <!--display of products as cards-->
-    <div class="body p-5 m-3 rounded shadow scroll-fade">
+    <div class="body p-5 m-3 mb-5 rounded shadow scroll-fade">
         <h3>Shop our wide library of books!</h3>
         <p class="lead">Looking for your next read? You've come to the right place!</p>
         <div class="row">
@@ -152,6 +152,14 @@
                     </div>
                 </div>
                 <% }) %>
+        </div>
+    </div>
+
+    <div class="body p-5 m-3 rounded shadow scroll-fade">
+        <h3>Heres your most recently viewed products!</h3>
+        <p class="lead">Ready to hop back in?</p>
+        <div class="row" id="recently-viewed-placeholder">
+
         </div>
     </div>
 
@@ -214,6 +222,7 @@
     </footer>
 
     <script src="fadeScroll.js"></script>
+    <script src="js/recentlyViewed.js"></script>
     <script src="hover.js"></script>
 
     <!--bootstrap javascript-->
