--- a/public_html/stylesheet.css
+++ b/public_html/stylesheet.css
@@ -185,3 +185,63 @@ footer {
     opacity: 1;
     transform: translateY(0);
 }
+
+.product-image-container {
+    position: relative;
+}
+
+.wishlist-heart {
+    position: absolute;
+    border-bottom-left-radius: 15px;
+    border-top-right-radius: 15px;
+    top: 0px;
+    right: 0px;
+    background: white;
+    border: none;
+    cursor: pointer;
+    padding: 10;
+    z-index: 2;
+}
+
+.wishlist-icon {
+    width: 44px;
+    height: 44px;
+}
+
+.wishlist-notification {
+    position: fixed;
+    top: 100px;
+    right: 20px;
+    background-color: green;
+    color: white;
+    padding: 15px;
+    border-radius: 15px;
+    font-size: 32px;
+    opacity: 0;
+    transition: opacity 0.5s ease, visibility 0.5s ease;
+    visibility: hidden;
+    z-index: 3;
+}
+
+.wishlist-notification.show {
+    opacity: 1;
+    visibility: visible;
+}
+
+.wishlist-notification.hide {
+    opacity: 0;
+    visibility: hidden;
+}
+
+.remove-wishlist {
+    position: absolute;
+    border-bottom-left-radius: 15px;
+    border-top-right-radius: 15px;
+    top: 0px;
+    right: 0px;
+    background: white;
+    border: none;
+    cursor: pointer;
+    padding: 10;
+    z-index: 2;
+}
