--- a/views/books.ejs
+++ b/views/books.ejs
@@ -37,8 +37,9 @@
                     <div class="px-2">
                         <form action="/search" method="post" class="d-flex" role="search">
                             <div class="input-group pb-3">
-                                <input class="form-control" type="search" id="navsearch" name="search" placeholder="Search products"
-                                    aria-label="Search" style="height: 50px; font-size: 18px">
+                                <input class="form-control" type="search" id="navsearch" name="search"
+                                    placeholder="Search products" aria-label="Search"
+                                    style="height: 50px; font-size: 18px">
                                 <button class="btn h-100" type="submit" style="height: 50px; font-size: 18px;">
                                     <i class="bi bi-search"></i>
                                 </button>
@@ -94,6 +95,10 @@
         </nav>
     </header>
 
+    <!--Notification for wishlist-->
+    <div id="wishlist-notification" class="wishlist-notification hidden"></div>
+
+
     <!--banner with background image and captions, along with an overlaying searchbar-->
     <div class="productBackground w-100">
         <div class="d-flex flex-column justify-content-center align-items-center py-5">
@@ -102,8 +107,8 @@
             <!--promient searchbar to highlight main page function-->
             <form action="/search" method="post" class="d-flex" role="search">
                 <div class="input-group w-100 pb-3">
-                    <input class="form-control" type="search" id="search" name="search" placeholder="Search products, genres"
-                        aria-label="Search" style="height: 50px; font-size: 20px">
+                    <input class="form-control" type="search" id="search" name="search"
+                        placeholder="Search products, genres" aria-label="Search" style="height: 50px; font-size: 20px">
                     <button class="btn h-100" type="submit" style="height: 50px; font-size: 20px;">
                         <i class="bi bi-search"></i>
                     </button>
@@ -130,7 +135,13 @@
             <% books.forEach(function(book) { %>
                 <div class="col-md-4 col-6 py-3">
                     <div class="card hover">
-                        <img src="images/<%= book.card_image %>" alt="book placeholder" class="card-img-top img-fluid">
+                        <div class="product-image-container">
+                            <img src="images/<%= book.card_image %>" alt="book placeholder"
+                                class="card-img-top img-fluid">
+                            <button class="wishlist-heart hover" data-id="<%= book.id %>">
+                                <img src="/images/heart_empty.png" alt="wishlist" class="wishlist-icon">
+                            </button>
+                        </div>
                         <div class="card-body">
                             <div class="d-flex justify-content-between">
                                 <p class="small text-muted">
@@ -224,6 +235,7 @@
     <script src="fadeScroll.js"></script>
     <script src="js/recentlyViewed.js"></script>
     <script src="hover.js"></script>
+    <script src="js/wishlist.js"></script>
 
     <!--bootstrap javascript-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
