Added review drafts saving feature

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -90,6 +90,16 @@
                                 <strong>Support</strong>
                             </a>
                         </li>
+                        <li class="nav-item px-3">
+                            <a class="nav-link text-nowrap text-white" href="/writereview">
+                                <strong>Reviews</strong>
+                            </a>
+                        </li>
+                        <li class="nav-item px-3">
+                            <a class="nav-link text-nowrap text-white" href="/information.html">
+                                <strong>Info</strong>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
