--- a/views/reviewDrafts.ejs
+++ b/views/reviewDrafts.ejs
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <!--googlefonts-->
+    <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -35,10 +35,11 @@
 
                     <!--search bar-->
                     <div class="px-2">
-                        <form class="d-flex" role="search">
+                        <form action="/search" method="post" class="d-flex" role="search">
                             <div class="input-group pb-3">
-                                <input class="form-control" type="search" placeholder="Search products"
-                                    aria-label="Search" style="height: 50px; font-size: 18px">
+                                <input class="form-control" type="search" id="navsearch" name="search"
+                                    placeholder="Search products" aria-label="Search"
+                                    style="height: 50px; font-size: 18px">
                                 <button class="btn h-100" type="submit" style="height: 50px; font-size: 18px;">
                                     <i class="bi bi-search"></i>
                                 </button>
@@ -88,82 +89,42 @@
                                 <strong>Support</strong>
                             </a>
                         </li>
+                        <li class="nav-item px-3">
+                            <a class="nav-link text-nowrap text-white" href="/writereview">
+                                <strong>Reviews</strong>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
 
-    <!--banner div with introduction text-->
-    <div class="overlay p-5 w-100 shadow">
-        <h2 class="display-6"><strong>The gateway to your next adventure</strong></h2>
-        <p class="lead">
-            <strong>Explore CozyLight's carefully curated collection—where every book promises a new
-            journey, waiting to be discovered.</strong>
-        </p>
+    <!--banner image-->
+    <div class="position-relative w-100 shadow-lg">
+        <img src="images/SupportHeader.jpg" alt="Tea and Books" class="img-fluid">
     </div>
 
-    <!--full product display. Includes image, text, radio-check buttons for format, and price/purhcase window-->
-    <div class="body p-5 m-3 rounded shadow-lg scroll-fade">
-        <div class="row">
-            <div class="col-md-4 col-12 py-3">
-                <img src="images/BookIntermezzo2.png" alt="Product Image" class="img-fluid shadow rounded">
-            </div>
-            <div class="col-md-5 col-12 px-3 py-3">
-                <h3 class="display-6"><strong>Intermezzo</strong></h3>
-                <div class="row">
-                    <div class="col-6">
-                        <p class="lead text-muted">Sally Rooney</p>
-                    </div>
-                    <div class="col-6">
-                        <p class="lead text-muted">Contemporary</p>
-                    </div>
-                </div>
-                <p class="lead text-muted">24/09/2024</p>
-                <p class="lead"><strong>Overview:</strong></p>
-                <p class="text-muted">Intermezzo follows two brothers, Ivan and Peter, in the year following the death
-                    of their father. Ivan is a 22-year-old socially awkward competitive chess player, while Peter is in
-                    his 30s and a successful human rights lawyer in Dublin. On the outside, they could not be more
-                    different, and indeed they do not get along.</p>
-                <p class="lead"><strong>Format:</strong></p>
-                <!--form check with radio items. Custom CSS formatting-->
-                <!--in future iterations, a format must be selected before 'Buy Now' button is operational-->
-                <form>
-                    <div class="form-check px-0">
-                        <input type="radio" class="btn-check" name="format" id="paperback" data-price="18.99"
-                            autocomplete="off" checked>
-                        <label class="btn format px-3 mb-3 me-3" for="paperback">
-                            <p>Paperback</p>
-                            <p class="text-muted">$18.99</p>
-                        </label>
-                        <input type="radio" class="btn-check" name="format" id="hardcover" data-price="23.99"
-                            autocomplete="off">
-                        <label class="btn format px-3 mb-3 me-3" for="hardcover">
-                            <p>Hardcover</p>
-                            <p class="text-muted">$23.99</p>
-                        </label>
-                    </div>
-                </form>
-            </div>
-            <!--div with price, shipping info, and buy now button-->
-            <!--in future interation, a shopping cart with checkout will be added and incorporated here-->
-            <div class="col-md-3 col-12 py-3">
-                <div class="buyNow p-3 m-0 shadow">
-                    <h4 class="display-6" id="priceDisplay">$___</h4>
-                    <br>
-                    <p>All products are shipped within 3 business days</p>
-                    <br>
-                    <div class="d-flex justify-content-center px-3 py-2">
-                        <button class="btn text-white rounded-pill px-4 py-2">
-                            <p class="h4">Buy Now</p>
-                        </button>
-                    </div>
-                </div>
-            </div>
+    <!--div with introduction text-->
+    <div class="overlay p-5 w-100 shadow">
+        <h2 class="display-6"><strong>Leave your mark on CozyLight!</strong></h2>
+        <p class="lead"><strong>Write a review and we'll show it on our webpage!</strong></p>
+    </div>
+
+    <!--div with FAQ-->
+    <div class="body m-5 p-4 shadow rounded">
+        <h3><strong>Write a Review!</strong></h3>
+        <br>
+        <div id="drafts-placeholder">
+
         </div>
     </div>
 
-    <!--universal footer used throughout the website-->
+    <!--div with contact us link-->
+    <div class="contact m-5 p-4 shadow rounded">
+        <h5><strong>Still have an issue, please <a href="contactUs.html">Contact Us!</a></strong></h5>
+    </div>
+
     <!--universal footer used throughout the website-->
     <footer class="mt-5">
         <div class="container py-4">
@@ -172,9 +133,9 @@
                 <div class="col-3 ps-5">
                     <p class="h5"><strong>Discover</strong></p>
                     <div class="d-flex flex-column gap-2">
-                        <a href="index.html" class="footerLink">Home</a>
-                        <a href="books.html" class="footerLink">Books</a>
-                        <a href="bestSeller.html" class="footerLink">Best Sellers</a>
+                        <a href="/" class="footerLink">Home</a>
+                        <a href="/books" class="footerLink">Books</a>
+                        <a href="/bestSeller" class="footerLink">Best Sellers</a>
                         <a href="news.html" class="footerLink">News</a>
                     </div>
                 </div>
@@ -222,10 +183,8 @@
         </div>
     </footer>
 
-    <script src="product.js"></script>
-    <script src="fadeScroll.js"></script>
-
-    <!--bootstrap javascript-->
+    <script src="/js/reviewDrafts.js"></script>
+    <!--boostrap javascript-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
