--- a/views/writeReview.ejs
+++ b/views/writeReview.ejs
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
-    <!--googlefonts-->
+    <!--google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -27,7 +27,7 @@
                 <div class="d-flex w-100 py-2 justify-content-between align-items-end">
                     <!--brand/logo-->
                     <div class="pe-3">
-                        <a class="navbar-brand" href="index.html">
+                        <a class="navbar-brand" href="/">
                             <img src="images/logo1.png" alt="CozyLight Books" class="img-fluid"
                                 style="max-width: 350px;">
                         </a>
@@ -37,8 +37,9 @@
                     <div class="px-2">
                         <form action="/search" method="post" class="d-flex" role="search">
                             <div class="input-group pb-3">
-                                <input class="form-control" type="search" id="navsearch" name="search" placeholder="Search products"
-                                    aria-label="Search" style="height: 50px; font-size: 18px">
+                                <input class="form-control" type="search" id="navsearch" name="search"
+                                    placeholder="Search products" aria-label="Search"
+                                    style="height: 50px; font-size: 18px">
                                 <button class="btn h-100" type="submit" style="height: 50px; font-size: 18px;">
                                     <i class="bi bi-search"></i>
                                 </button>
@@ -59,12 +60,12 @@
                 <div class="collapse navbar-collapse w-100" id="navbar">
                     <ul class="navbar-nav">
                         <li class="nav-item px-3">
-                            <a class="nav-link text-white" href="books.html">
+                            <a class="nav-link text-white" href="/books">
                                 <strong>Books</strong>
                             </a>
                         </li>
                         <li class="nav-item px-3">
-                            <a class="nav-link text-nowrap text-white" href="bestSeller.html">
+                            <a class="nav-link text-nowrap text-white" href="/bestseller">
                                 <strong>Best Sellers</strong>
                             </a>
                         </li>
@@ -88,100 +89,85 @@
                                 <strong>Support</strong>
                             </a>
                         </li>
+                        <li class="nav-item px-3">
+                            <a class="nav-link text-nowrap text-white" href="/writereview">
+                                <strong>Reviews</strong>
+                            </a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
 
-    <!--banner with background image and captions, along with an overlaying searchbar-->
-    <div class="productBackground w-100">
-        <div class="d-flex flex-column justify-content-center align-items-center py-5">
-            <h2 class="display-5 pt-5 text-white"><strong>Find anything you're looking for</strong></h2>
-            <p class="lead text-white"><strong>What are you in the mood for today?</strong></p>
-            <!--promient searchbar to highlight main page function-->
-            <form class="d-flex" role="search">
-                <div class="input-group w-100 pb-3">
-                    <input class="form-control" type="search" placeholder="Search products, genres, or authors"
-                        aria-label="Search" style="height: 50px; font-size: 20px">
-                    <button class="btn h-100" type="submit" style="height: 50px; font-size: 20px;">
-                        <i class="bi bi-search"></i>
-                    </button>
-                </div>
-            </form>
-        </div>
+    <!--banner image-->
+    <div class="position-relative w-100 shadow-lg">
+        <img src="images/SupportHeader.jpg" alt="Tea and Books" class="img-fluid">
     </div>
 
-    <!--banner with flavour text-->
+    <!--div with introduction text-->
     <div class="overlay p-5 w-100 shadow">
-        <h2 class="display-6"><strong>The gateway to your next adventure</strong></h2>
-        <p class="lead">
-            <strong>Explore CozyLight's carefully curated collection—where every book promises a new
-            journey, waiting to be discovered.</strong>
-        </p>
+        <h2 class="display-6"><strong>Leave your mark on CozyLight!</strong></h2>
+        <p class="lead"><strong>Write a review and we'll show it on our webpage!</strong></p>
     </div>
 
-    <!--display of products as cards-->
-    <div class="body p-5 m-3 rounded shadow scroll-fade">
-        <h3>Shop our wide library of books!</h3>
-        <p class="lead">Looking for your next read? You've come to the right place!</p>
-        <div class="row">
-            <div class="col-md-4 col-6 py-3">
-                <div class="card hover">
-                    <img src="images/BookIntermezzo1.png" alt="book placeholder" class="card-img-top img-fluid">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between">
-                            <p class="small text-muted">Sally Rooney</p>
-                            <p class="small text-muted">Contemporary</p>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <h5 class="card-title">Intermezzo</h5>
-                            <h5>$18.99</h5>
-                        </div>
-                        <a href="product1.html" class="stretched-link"></a>
+    <!--div with FAQ-->
+    <div class="body m-5 p-4 shadow rounded">
+        <h3><strong>Write a Review!</strong></h3>
+        <br>
+        <form id="queryForm">
+            <div class="px-2 pb-3">
+                <label for="book" class="form-label">Choose a book!</label>
+                <select class="form-select" name="book" id="book" required>
+                    <option value="" selected>Book...</option>
+                    <% books.forEach(function(book) { %>
+                        <option value="<%= book.id %>">
+                            <%= book.title %>
+                        </option>
+                        <% }) %>
+                </select>
+                <div class="invalid-feedback">
+                    Must choose a book!
+                </div>
+            </div>
+            <div class="px-2 py-3">
+                <label for="title" class="form-label">Give your review a title!</label>
+                <input type="text" class="form-control" id="title" name="title" required>
+                <div class="invalid-feedback">
+                    Must enter a title!
+                </div>
+            </div>
+            <div class="px-2 py-3">
+                <label for="review" class="form-label">Write your review!</label>
+                <textarea class="form-control" id="review" name="review" rows="8" placeholder="Your review..."
+                    required></textarea>
+                <div class="invalid-feedback">
+                    Must include a review!
+                </div>
+            </div>
+            <div class=" my-4 mx-auto text-center">
+                <div class="row justify-content-center">
+                    <div class="col-4">
+                        <button type="button" class="btn text-white" id="saveDraftButton"><strong>Save
+                                Draft</strong></button>
+                    </div>
+                    <div class="col-4">
+                        <button type="button" class="btn text-white" id="loadDraftButton"><strong>Load
+                                Draft</strong></button>
+                    </div>
+                    <div class="col-4">
+                        <button type="button" class="btn text-white" id="deleteDraftButton"><strong>Delete
+                                Draft</strong></button>
                     </div>
                 </div>
             </div>
-
-            <div class="col-md-4 col-6 py-3">
-                <div class="card hover">
-                    <img src="images/BookBabel1.png" alt="Babel Cover" class="card-img-top img-fluid">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between">
-                            <p class="small text-muted">R.F. Kuang</p>
-                            <p class="small text-muted">Fantasy</p>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <h5 class="card-title">Babel</h5>
-                            <h5>$20.99</h5>
-                        </div>
-                        <a href="product1.html" class="stretched-link"></a>
-                    </div>
+            <div class="px-2 py-3">
+                <div class="d-grid gap-3 col-8 my-4 mx-auto">
+                    <!--submit and reset buttons for form-->
+                    <button type="Submit" class="btn text-white" id="submitButton"><strong>Submit</strong></button>
                 </div>
             </div>
-
-            <div class="col-md-4 col-6 py-3">
-                <div class="card hover">
-                    <img src="images/BookKingInYellow1.png" alt="book placeholder" class="card-img-top img-fluid">
-                    <div class="card-body">
-                        <div class="d-flex justify-content-between">
-                            <p class="small text-muted">R.W. Chambers</p>
-                            <p class="small text-muted">Horror</p>
-                        </div>
-                        <div class="d-flex justify-content-between">
-                            <h5 class="card-title">The King In Yellow</h5>
-                            <h5>$18.99</h5>
-                        </div>
-                        <a href="product1.html" class="stretched-link"></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!--button to show more products-->
-        <!--To be fully implemented in future iterations-->
-        <div class="d-flex justify-content-end px-3 py-2">
-            <button class="btn text-white rounded-pill px-4 py-2"><strong>See more</strong></button>
-        </div>
+        </form>
     </div>
 
     <!--universal footer used throughout the website-->
@@ -192,9 +178,9 @@
                 <div class="col-3 ps-5">
                     <p class="h5"><strong>Discover</strong></p>
                     <div class="d-flex flex-column gap-2">
-                        <a href="index.html" class="footerLink">Home</a>
-                        <a href="books.html" class="footerLink">Books</a>
-                        <a href="bestSeller.html" class="footerLink">Best Sellers</a>
+                        <a href="/" class="footerLink">Home</a>
+                        <a href="/books" class="footerLink">Books</a>
+                        <a href="/bestSeller" class="footerLink">Best Sellers</a>
                         <a href="news.html" class="footerLink">News</a>
                     </div>
                 </div>
@@ -242,10 +228,8 @@
         </div>
     </footer>
 
-    <script src="fadeScroll.js"></script>
-    <script src="hover.js"></script>
-
-    <!--bootstrap javascript-->
+    <script src="/js/reviewDrafts.js"></script>
+    <!--boostrap javascript-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
